# chair-localserver

./: .devcontainer.json  main.py  pyproject.toml  save.db-shm  save.db-wal
config/: __init__.py  config.toml
core/: path.py
core/config/: __init__.py  config.toml
core/database/: __init__.py  models.py
core/extensions/deepseek/: __init__.py
core/extensions/weather/: __init__.py
core/pydantic_models/: __init__.py
core/utils/: http.py  ws_connect.py
extensions/deepseek/: __init__.py
extensions/weather/: __init__.py
